@@ -1,9 +1,10 @@
 package com.github.massimopavoni.funx.jt.ast.visitor;
 
+import com.github.massimopavoni.funx.jt.ast.Utils;
 import com.github.massimopavoni.funx.jt.ast.node.ASTNode;
 import com.github.massimopavoni.funx.jt.ast.node.Declaration;
 import com.github.massimopavoni.funx.jt.ast.node.Expression;
-import com.github.massimopavoni.funx.jt.ast.node.Type;
+import com.github.massimopavoni.funx.jt.ast.typesystem.Type;
 import com.github.massimopavoni.funx.jt.parser.FunxLexer;
 
 import java.util.Collections;
@@ -19,6 +20,10 @@ public final class GraphvizBuilder extends ASTVisitor<String> {
      */
     private final StringBuilder builder;
     /**
+     * Inference annotations printing flag.
+     */
+    private final boolean inferenceAnnotations;
+    /**
      * Internal counter to get identifiers for AST nodes,
      * used instead of the hash code to avoid collisions and a resulting weird looking graph.
      */
@@ -27,10 +32,12 @@ public final class GraphvizBuilder extends ASTVisitor<String> {
     /**
      * Constructor for the Graphviz builder.
      *
-     * @param builder Graphviz code string builder
+     * @param builder              Graphviz code string builder
+     * @param inferenceAnnotations inference annotations printing flag
      */
-    public GraphvizBuilder(StringBuilder builder) {
+    public GraphvizBuilder(StringBuilder builder, boolean inferenceAnnotations) {
         this.builder = builder;
+        this.inferenceAnnotations = inferenceAnnotations;
     }
 
     /**
@@ -43,7 +50,7 @@ public final class GraphvizBuilder extends ASTVisitor<String> {
     }
 
     /**
-     * Returns a unique identifier for an AST node.
+     * Return a unique identifier for an AST node.
      *
      * @return unique identifier using the internal counter
      */
@@ -57,18 +64,25 @@ public final class GraphvizBuilder extends ASTVisitor<String> {
      * (We don't use the ASTVisitor visit method with node results aggregation within this very custom visitor).
      *
      * @param label    node label
+     * @param scheme   node scheme (optional)
      * @param children list of children nodes
      * @return node identifier
      */
-    private String toGraphvizDefault(String label, List<ASTNode> children) {
+    private String toGraphvizDefault(String label, String scheme, List<? extends ASTNode> children) {
         String nodeId = getNodeId();
-        builder.append(String.format("%s [label=\"%s\"];%n",
-                nodeId, label));
+        builder.append(nodeId).append(" [label=<").append(label);
+        if (inferenceAnnotations && scheme != null)
+            // if we have inference annotations, we print them in italic and with a nicer arrow
+            builder.append(" : ")
+                    .append("<I>")
+                    .append(scheme.replace("->", "&#8594;"))
+                    .append("</I>");
+        builder.append(">];\n");
         children.forEach(c ->
                 builder.append(
                         String.format("%s -> %s;%n",
                                 nodeId,
-                                c.accept(this))));
+                                visit(c))));
         return nodeId;
     }
 
@@ -84,14 +98,13 @@ public final class GraphvizBuilder extends ASTVisitor<String> {
                 digraph AST {
                 node [fontname="Arial", color=gray40, shape=egg];
                 edge [fontname="Arial", color=gray40, arrowsize=0.8];
-                """.stripIndent());
+                """);
         String nodeId = toGraphvizDefault(String.format("module %s%s%s",
                         module.packageName,
                         module.packageName.isEmpty() ? "" : ".",
                         module.name),
-                module.main == null ?
-                        Collections.singletonList(module.declarations) :
-                        List.of(module.main, module.declarations));
+                null,
+                Collections.singletonList(module.let));
         builder.append("}\n");
         return nodeId;
     }
@@ -105,19 +118,20 @@ public final class GraphvizBuilder extends ASTVisitor<String> {
     @Override
     public String visitDeclarations(ASTNode.Declarations declarations) {
         return toGraphvizDefault(ASTNode.Declarations.class.getSimpleName(),
+                null,
                 declarations.declarationList);
     }
 
     /**
-     * Visit the main {@link Declaration} AST node.
+     * Visit the main {@link Expression} AST node.
      *
-     * @param main declaration node
+     * @param main expression node
      * @return visitor result
      */
     @Override
-    public String visitMain(Declaration main) {
-        return toGraphvizDefault(main.id,
-                Collections.singletonList(main.expression));
+    public String visitMain(Expression main) {
+        throw new IllegalStateException(String.format(
+                "Main expression cannot be visited directly by %s", GraphvizBuilder.class.getSimpleName()));
     }
 
 
@@ -130,45 +144,8 @@ public final class GraphvizBuilder extends ASTVisitor<String> {
     @Override
     public String visitDeclaration(Declaration declaration) {
         return toGraphvizDefault(declaration.id,
-                declaration.type == null ?
-                        Collections.singletonList(declaration.expression) :
-                        List.of(declaration.type, declaration.expression));
-    }
-
-    /**
-     * Visit a {@link Type.NamedType} AST node.
-     *
-     * @param type type node
-     * @return visitor result
-     */
-    @Override
-    public String visitNamedType(Type.NamedType type) {
-        return toGraphvizDefault(type.toString(),
-                Collections.emptyList());
-    }
-
-    /**
-     * Visit a {@link Type.VariableType} AST node.
-     *
-     * @param type type node
-     * @return visitor result
-     */
-    @Override
-    public String visitVariableType(Type.VariableType type) {
-        return toGraphvizDefault(type.toString(),
-                Collections.emptyList());
-    }
-
-    /**
-     * Visit a {@link Type.ArrowType} AST node.
-     *
-     * @param type type node
-     * @return visitor result
-     */
-    @Override
-    public String visitArrowType(Type.ArrowType type) {
-        return toGraphvizDefault(ASTNode.fromLexerToken(FunxLexer.Arrow),
-                List.of(type.input, type.output));
+                declaration.scheme().toString(),
+                Collections.singletonList(declaration.expression));
     }
 
     /**
@@ -181,6 +158,7 @@ public final class GraphvizBuilder extends ASTVisitor<String> {
     public String visitLambda(Expression.Lambda lambda) {
         return toGraphvizDefault(
                 String.format("\\\\%s", lambda.paramId),
+                lambda.type().toString(),
                 Collections.singletonList(lambda.expression));
     }
 
@@ -192,8 +170,11 @@ public final class GraphvizBuilder extends ASTVisitor<String> {
      */
     @Override
     public String visitLet(Expression.Let let) {
-        return toGraphvizDefault(ASTNode.fromLexerToken(FunxLexer.LET),
-                List.of(let.localDeclarations, let.expression));
+        return toGraphvizDefault(Utils.fromLexerToken(FunxLexer.LET),
+                null,
+                let.expression.type() == Type.Boring.INSTANCE
+                        ? Collections.singletonList(let.localDeclarations)
+                        : List.of(let.localDeclarations, let.expression));
     }
 
     /**
@@ -205,7 +186,8 @@ public final class GraphvizBuilder extends ASTVisitor<String> {
      */
     @Override
     public String visitIf(Expression.If ifE) {
-        return toGraphvizDefault(ASTNode.fromLexerToken(FunxLexer.IF),
+        return toGraphvizDefault(Utils.fromLexerToken(FunxLexer.IF),
+                ifE.type().toString(),
                 List.of(ifE.condition, ifE.thenBranch, ifE.elseBranch));
     }
 
@@ -219,6 +201,7 @@ public final class GraphvizBuilder extends ASTVisitor<String> {
     @Override
     public String visitApplication(Expression.Application application) {
         return toGraphvizDefault("@",
+                application.type().toString(),
                 List.of(application.left, application.right));
     }
 
@@ -231,6 +214,7 @@ public final class GraphvizBuilder extends ASTVisitor<String> {
     @Override
     public String visitConstant(Expression.Constant constant) {
         return toGraphvizDefault(constant.value.toString(),
+                constant.type().toString(),
                 Collections.emptyList());
     }
 
@@ -243,6 +227,7 @@ public final class GraphvizBuilder extends ASTVisitor<String> {
     @Override
     public String visitVariable(Expression.Variable variable) {
         return toGraphvizDefault(variable.id,
+                variable.type().toString(),
                 Collections.emptyList());
     }
 }
